crates/pgevolve-core-macros/tests/ui/on_tuple_struct.stderr
error: #[derive(Diff)] only supports structs with named fields
 --> tests/ui/on_tuple_struct.rs:4:9
  |
4 | struct T(String);
  |         ^^^^^^^^
