crates/pgevolve-core-macros/tests/ui/on_tuple_struct.rs
use pgevolve_core_macros::Diff;

#[derive(Diff)]
struct T(String);

fn main() {}
